--- a/index.html
+++ b/index.html
@@ -11,26 +11,32 @@
 	<div id="container">
 		<div class="box">
 			<div class="tshirt">
-				<a href="#">
-				<i id="rotator" class="googleicons rotateicon material-icons">rotate_right</i></a>
-				<img class="shirtimage" src="images/1_front.png">
+						<i id="rotator" class="x rotateicon material-icons">rotate_right</i>
+						<input type="checkbox" class="x" />
+						<div class="shirtFlip">
+							<img class="shirtimage" src="images/1_front.png" id="front">
+							<img class="shirtimage" src="images/1_back.png" id="back">
+						</div>	
 			</div>
+
 			<div class="icons">
 				<i class="googleicons material-icons">repeat</i>
 				<i class="googleicons material-icons">favorite</i>
-				<i id="size" class="googleicons material-icons">format_size</i>
+				<i id="size" class="googleicons material-icons">format_size</i>	
 				<div id="tshirtSizeSelection">
-					<img class="tshirtsize" src="images/t-shirtS.svg" alt="tshirt size">
-					<img class="tshirtsize" src="images/t-shirtM.svg" alt="tshirt size">
-					<img class="tshirtsize" src="images/t-shirtL.svg" alt="tshirt size">
 					<img class="tshirtsize" src="images/t-shirtXL.svg" alt="tshirt size">
+					<img class="tshirtsize" src="images/t-shirtL.svg"alt="tshirt size">
+					<img class="tshirtsize" src="images/t-shirtM.svg" alt="tshirt size">
+					<img class="tshirtsize" src="images/t-shirtS.svg" alt="tshirt size">
+					<span id="arrow_down1"></span>
 				</div>
 				<i id="cropsquare" class="googleicons material-icons">crop_square</i>
 				<div id="colorOption">
 					<div class="colorbox" id="blue"></div>
-					<div class="colorbox" id="yellow"></div>
+					<div class="colorbox" id="orange"></div>
 					<div class="colorbox" id="pink"></div>
 					<div class="colorbox" id="green"></div>
+					<span id="arrow_down2"></span>
 				</div>	
 				<i class="googleicons material-icons">add_shopping_cart</i>
 			</div>
@@ -40,17 +46,75 @@
 			</div>
 		</div>
 		<div class="box">
-			<div class="tshirt"></div>
-			<div class="icons"></div>
+			<div class="tshirt">
+						<i id="rotator" class="x rotateicon material-icons">rotate_right</i>
+						<input type="checkbox" class="x" />
+						<div class="shirtFlip">
+							<img class="shirtimage" src="images/2_front.png" id="front">
+							<img class="shirtimage" src="images/2_back.png" id="back">
+						</div>	
+			</div>
+
+			<div class="icons">
+				<i class="googleicons material-icons">repeat</i>
+				<i class="googleicons material-icons">favorite</i>
+				<i id="size" class="googleicons material-icons">format_size</i>	
+				<div id="tshirtSizeSelection">
+					<img class="tshirtsize" src="images/t-shirtXL.svg" alt="tshirt size">
+					<img class="tshirtsize" src="images/t-shirtL.svg"alt="tshirt size">
+					<img class="tshirtsize" src="images/t-shirtM.svg" alt="tshirt size">
+					<img class="tshirtsize" src="images/t-shirtS.svg" alt="tshirt size">
+					<span id="arrow_down1"></span>
+				</div>
+				<i id="cropsquare" class="googleicons material-icons">crop_square</i>
+				<div id="colorOption">
+					<div class="colorbox" id="blue"></div>
+					<div class="colorbox" id="orange"></div>
+					<div class="colorbox" id="pink"></div>
+					<div class="colorbox" id="green"></div>
+					<span id="arrow_down2"></span>
+				</div>	
+				<i class="googleicons material-icons">add_shopping_cart</i>
+			</div>
 			<div class="pricing">
-				<p>Nature Lover $19</p>
+				<div><h1>Nature Lover</h1></div>
+				<div><h2>$19</h2></div>
 			</div>
 		</div>
 		<div class="box">
-			<div class="tshirt"></div>
-			<div class="icons"></div>
+			<div class="tshirt">
+						<i id="rotator" class="x rotateicon material-icons">rotate_right</i>
+						<input type="checkbox" class="x" />
+						<div class="shirtFlip">
+							<img class="shirtimage" src="images/3_front.png" id="front">
+							<img class="shirtimage" src="images/3_back.png" id="back">
+						</div>	
+			</div>
+
+			<div class="icons">
+				<i class="googleicons material-icons">repeat</i>
+				<i class="googleicons material-icons">favorite</i>
+				<i id="size" class="googleicons material-icons">format_size</i>	
+				<div id="tshirtSizeSelection">
+					<img class="tshirtsize" src="images/t-shirtXL.svg" alt="tshirt size">
+					<img class="tshirtsize" src="images/t-shirtL.svg"alt="tshirt size">
+					<img class="tshirtsize" src="images/t-shirtM.svg" alt="tshirt size">
+					<img class="tshirtsize" src="images/t-shirtS.svg" alt="tshirt size">
+					<span id="arrow_down1"></span>
+				</div>
+				<i id="cropsquare" class="googleicons material-icons">crop_square</i>
+				<div id="colorOption">
+					<div class="colorbox" id="blue"></div>
+					<div class="colorbox" id="orange"></div>
+					<div class="colorbox" id="pink"></div>
+					<div class="colorbox" id="green"></div>
+					<span id="arrow_down2"></span>
+				</div>	
+				<i class="googleicons material-icons">add_shopping_cart</i>
+			</div>
 			<div class="pricing">
-				<p>Forrest Walk $39</p>
+				<div><h1>Forrest Walk</h1></div>
+				<div><h2>$39</h2></div>
 			</div>
 		</div>
 	</div>
